--- a/style/categories/categories.css
+++ b/style/categories/categories.css
@@ -262,6 +262,7 @@ span.nm-count{
 @media only screen and (max-width: 500px) { 
   .main {
     width: 83%;
+    margin-top: 88px; 
   }
   .old-categories {
     width: 100%;
@@ -341,6 +342,7 @@ span.nm-count{
     font-size: 19px;
     padding: 8px 32px;
     width: 100%;
+    margin-bottom: 10px;
   }
 }
 
