--- a/style/common/common.css
+++ b/style/common/common.css
@@ -28,6 +28,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 999;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,22 +36,39 @@ body {
 
 .loading svg {
   position: relative;
-  width: 90px;
-  height: 90px;
-  animation: loadingRotate 2s linear infinite;
+  animation: loadingRotate 1s linear infinite;
+}
+
+.loading svg.big {
+  width: 79px;
+  height: 79px;
+}
+
+.loading svg.small {
+  width: 59px;
+  height: 59px;
 }
 
 .loading svg circle {
   width: 100%;
   height: 100%;
   fill: none;
-  stroke-width: 8;
   stroke: var(--secondary);
   transform: translate(5px, 5px);
   stroke-linecap: round;
-  stroke-dasharray: 248;
-  stroke-dashoffset: 248;
-  animation: loadingAnimate 4s linear infinite;
+  animation: loadingAnimate 2s linear infinite;
+}
+
+.loading svg.big circle {
+  stroke-width: 8;
+  stroke-dasharray: 218;
+  stroke-dashoffset: 218;
+}
+
+.loading svg.small circle {
+  stroke-width: 6px;
+  stroke-dasharray: 152;
+  stroke-dashoffset: 152;
 }
 
 #root {
@@ -115,26 +133,13 @@ body {
   background-color: var(--secondary-min8);
 }
 
+
 @keyframes loadingRotate {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-
-@keyframes loadingAnimate {
-  0%, 100% {
-    stroke-dashoffset: 248;
-  }
-
-  50% {
-    stroke-dashoffset: 0;
-  }
-
-  50.1% {
-    stroke-dashoffset: 496;
   }
 }
 
@@ -172,23 +177,54 @@ body {
   .main {
     margin-bottom: 116px;
   }
-  .loading {
-    padding-bottom: 107px;
-}
 }
 
 @media only screen and (max-width: 500px) {
-  .loading {
-    padding-bottom: 86px;
+  .loading svg.big {
+    display: none !important;
   }
+  @keyframes loadingAnimate {
+    0%, 100% {
+      stroke-dashoffset: 152;
+    }
+  
+    50% {
+      stroke-dashoffset: 0;
+    }
+  
+    50.1% {
+      stroke-dashoffset: 304;
+    }
+  }
+
   .main {
     margin-bottom: 95px;
   }
+
   body::-webkit-scrollbar {
     width: 0px;
     background: transparent;
   }
   body {
     font-weight: 500;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  .loading svg.small {
+    display: none !important;
+  }
+  @keyframes loadingAnimate {
+    0%, 100% {
+      stroke-dashoffset: 218;
+    }
+  
+    50% {
+      stroke-dashoffset: 0;
+    }
+  
+    50.1% {
+      stroke-dashoffset: 436;
+    }
   }
 }
