Make recieved-task template on home page

--- a/style/home/home.css
+++ b/style/home/home.css
@@ -1,5 +1,6 @@
 @import url('./edit-task.css');
 @import url('./share-task.css');
+@import url('./recieved-task.css');
 
 .container {
   display: flex;
