--- a/style/home/share-task.css
+++ b/style/home/share-task.css
@@ -87,19 +87,19 @@
 .share-body .task-nm {
   width: 100%;
   margin-top: 5px;
+  display: flex;
+  justify-content: start;
 }
 
 .share-body .task-nm span {
-  width: 70px;
-  height: 34px;
   background-color: var(--secondary);
-  align-items: center;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   font-weight: 400;
   font-size: 15px;
+  padding: 9px 16px;
   border-radius: 16px;
 }
 
@@ -366,8 +366,7 @@
     padding: 0 10px;
   }
   .share-body .task-nm span {
-    width: 60px;
-    height: 26px;
+    padding: 7px 12px;
     font-size: 12px;
     border-radius: 14px;
   }
