--- a/style/common/color-picker.css
+++ b/style/common/color-picker.css
@@ -2,6 +2,7 @@
   width: 100%;
   border-radius: 15px;
   border: 1px solid var(--input-brdr);
+  background-color: rgba(255, 255, 255, 0.1);
   position: relative;
 }
 
