--- a/style/common/ctgry-selector.css
+++ b/style/common/ctgry-selector.css
@@ -3,6 +3,7 @@
   border-radius: 15px;
   border: 1px solid var(--input-brdr);
   margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.1);
   position: relative;
 }
 
