--- a/style/common/header.css
+++ b/style/common/header.css
@@ -11,6 +11,10 @@
   transition: background-color 0.3s;
 }
 
+body.no-scroll #header .user {
+  padding-right: 8px;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -129,3 +133,9 @@
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
   }
 }
+
+@media only screen and (min-width: 1026px) {
+  body.no-scroll #header .user {
+    padding-right: 7px;
+  }
+} 
