--- a/style/common/navbar.css
+++ b/style/common/navbar.css
@@ -14,6 +14,10 @@
   transition: background 0.3s;
 }
 
+body.no-scroll #navbar {
+  margin-right: 8px;
+}
+
 #navbar ul {
   display: flex;
   align-items: center;
