--- a/style/task/task.css
+++ b/style/task/task.css
@@ -100,6 +100,28 @@ table, td, tr:last-child {
 }
 
 @media only screen and (max-width: 500px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+  #root {
+    flex:1;
+    display: flex;
+    flex-direction: column;
+  }
+  .main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 63px;
+  }
+
+  .card {
+    margin: 0;
+    width: 93%;
+  }
   .card .heading {
     font-size: 17px;
   }
