--- a/style/add-task/add-task.css
+++ b/style/add-task/add-task.css
@@ -66,7 +66,7 @@ span.nm-count, span.des-count {
   width: 100%;
 }
 
-.category span {
+.category span.heading {
   font-weight: 500;
   letter-spacing: 0.5px;
 }
@@ -128,6 +128,13 @@ span.nm-count, span.des-count {
 
 
 @media only screen and (max-width: 500px) {
+  .main {
+    margin-bottom: 0px;
+  }
+  .form {
+    padding-top: 70px;
+    row-gap: 22px;
+  }
   .form .label1 {
     font-size: 11px;
   }
@@ -140,19 +147,20 @@ span.nm-count, span.des-count {
   .date-time, .name, .description {
     padding: 12px 8px;
   }
-  .category span {
+  .category span.heading {
     font-size: 13px;
   }
   .modify-category {
-    font-size: 13px;
+    font-size: 12px;
+    margin-top: 10px;
   }
   .modify-category i {
-    font-size: 15px;
+    font-size: 14px;
   }
   #create-btn {
     font-size: 19px;
     padding: 8px 32px;
-    margin-bottom: 10px;
+    margin-bottom: 105px;
   }
 }
 
