--- a/style/categories/categories.css
+++ b/style/categories/categories.css
@@ -263,6 +263,7 @@ span.nm-count{
   .main {
     width: 83%;
     margin-top: 88px; 
+    margin-bottom: 0;
   }
   .old-categories {
     width: 100%;
@@ -322,9 +323,11 @@ span.nm-count{
 
   .new-ctgry {
     width: 100%;
+    margin-top: 35px;
   }
   .new-ctgry h2 {
     font-size: 18px;
+    margin-bottom: 25px;
   }
   .new-ctgry .category-name {
     padding: 12px 8px;
@@ -342,7 +345,7 @@ span.nm-count{
     font-size: 19px;
     padding: 8px 32px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 105px;
   }
 }
 
