--- a/style/common/ctgry-selector.css
+++ b/style/common/ctgry-selector.css
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 20px;
+  padding: 12px 20px;
   cursor: pointer;
 }
 
@@ -32,7 +32,7 @@
   display: flex;
   align-items: center;
   font-size: 13px;
-  font-weight: bold;
+  font-weight: 500;
   list-style: none;
   background-color: var(--secondary);
   color: #fff;
@@ -139,15 +139,31 @@ span.selected-emoji {
 }
 
 @media only screen and (max-width: 500px) {
+  #ctgry-selector {
+    border-radius: 13px;
+    margin-top: 10px;
+  }
   #ctgry-selector .selected li {
-    padding: 5px 10px;
-    border-radius: 15px;
+    padding: 4px 10px;
+    border-radius: 14px;
+  }
+  #ctgry-selector span.selected-emoji {
+    font-size: 13px;
+  }
+  #ctgry-selector .selected li span:last-child {
+    font-size: 12px;
+  }
+  #ctgry-selector .selected {
+    padding: 10px 16px;
   }
   #ctgry-selector .select h3 {
     font-size: 14px;
   }
   #ctgry-selector .select p {
     font-size: 12px;
+  }
+  #ctgry-selector .select li {
+    font-size: 13px;
   }
   #ctgry-selector .select li .select-emoji {
     font-size: 15px;
