--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -266,15 +266,15 @@
     font-size: 20px;
   }
   #sidebar li {
-    font-size: 13px;
+    font-size: 12px;
     padding: 12px 12px;
-    border-radius: 13px;
+    border-radius: 12px;
   }
   #sidebar .sidebar-tasks svg {
     width: 17px;
   }
   #sidebar li svg {
-    width: 20px !important;
+    width: 18px !important;
     margin-right: 8px;
     margin-left: 0px;
   }
@@ -285,8 +285,11 @@
     border-radius: 11px;
   }
   #sidebar li i {
-    font-size: 17px;
+    font-size: 16px;
     margin-right: 9px;
+  }
+  .sidebar-settings {
+    padding: 15px 12px !important;
   }
 
   .sidebar-user div {
@@ -298,6 +301,6 @@
     font-size: 22px;
   }
   #sidebar .creator {
-    font-size: 11px;
+    font-size: 10px;
   }
 }
