--- a/style/common/common.css
+++ b/style/common/common.css
@@ -43,40 +43,19 @@ body.no-scroll {
 }
 
 .loading svg {
-  position: relative;
-  animation: loadingRotate 1s linear infinite;
-}
-
-.loading svg.big {
   width: 79px;
   height: 79px;
-}
-
-.loading svg.small {
-  width: 59px;
-  height: 59px;
+  animation: loadingSvgAnim 1s linear infinite;
 }
 
 .loading svg circle {
-  width: 100%;
-  height: 100%;
+  stroke-width: 8;
+  stroke-dasharray: 252;
+  stroke-dashoffset: 252;
   fill: none;
   stroke: var(--secondary);
-  transform: translate(5px, 5px);
   stroke-linecap: round;
-  animation: loadingAnimate 2s linear infinite;
-}
-
-.loading svg.big circle {
-  stroke-width: 8;
-  stroke-dasharray: 218;
-  stroke-dashoffset: 218;
-}
-
-.loading svg.small circle {
-  stroke-width: 6px;
-  stroke-dasharray: 152;
-  stroke-dashoffset: 152;
+  animation: loadingCircleAnim 2s linear infinite;
 }
 
 #root {
@@ -155,12 +134,26 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 
-@keyframes loadingRotate {
+@keyframes loadingSvgAnim {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingCircleAnim {
+  0%, 100% {
+    stroke-dashoffset: 252;
+  }
+
+  50% {
+    stroke-dashoffset: 0;
+  }
+
+  50.1% {
+    stroke-dashoffset: 504;
   }
 }
 
@@ -201,21 +194,12 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 @media only screen and (max-width: 500px) {
-  .loading svg.big {
-    display: none !important;
+  .loading svg {
+    width: 59px;
+    height: 59px;
   }
-  @keyframes loadingAnimate {
-    0%, 100% {
-      stroke-dashoffset: 152;
-    }
-  
-    50% {
-      stroke-dashoffset: 0;
-    }
-  
-    50.1% {
-      stroke-dashoffset: 304;
-    }
+  .loading svg circle {
+    stroke-width: 6px;
   }
 
   .main {
@@ -233,24 +217,5 @@ body::-webkit-scrollbar-thumb:hover {
   }
   ::-webkit-scrollbar-thumb {
     border-radius: 3px;
-  }
-}
-
-@media only screen and (min-width: 501px) {
-  .loading svg.small {
-    display: none !important;
-  }
-  @keyframes loadingAnimate {
-    0%, 100% {
-      stroke-dashoffset: 218;
-    }
-  
-    50% {
-      stroke-dashoffset: 0;
-    }
-  
-    50.1% {
-      stroke-dashoffset: 436;
-    }
   }
 }
