--- a/style/home/home.css
+++ b/style/home/home.css
@@ -174,6 +174,8 @@ body.no-scroll .add-btn {
 
 .progress svg {
   transform: rotate(-90deg);
+  width: 80px;
+  height: 80px;
 }
 
 .progress circle {
@@ -901,6 +903,10 @@ span.highlighted-text {
     min-height: 100px;
   }
   .progress .circle-container {
+    width: 66px;
+    height: 66px;
+  }
+  .progress svg {
     width: 66px;
     height: 66px;
   }
